data/derived/fa15/progs/unify/prog2152.ml.out
Characters 46-52:
  let rec funt = fun x -> (funt b, f b = b) in
                           ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * 'b
